--- a/test/树形结构/index.html
+++ b/test/树形结构/index.html
@@ -602,7 +602,7 @@
         var json={
             data:combinationNode(formatTree)
         };
-        console.log(json);
+        console.log(JSON.stringify(json));
         function formatTreeData(tree) {
             if (!tree)return;
             var formatTree = {};
