完成了好多，忘了·适当的提交了。   1.准备制作 业务处理 中 入库操作 模块   2.完善 虚拟数据 等全部 page 完成后 修改数据库 菜单表   3.准备 添加旋转按钮 现在正在测试   4.修改 开发 基层 框架的配置。 目前，目测挂了，得重构下。

--- a/static/main.html
+++ b/static/main.html
@@ -63,7 +63,7 @@
         <el-breadcrumb separator="/">
             <el-breadcrumb-item v-for="(item, index) in breadcrumb">{{item}}</el-breadcrumb-item>
         </el-breadcrumb>
-        <div id="showing" v-loading.body="showingLoading">
+        <div id="showing" v-loading.body="showingLoading" element-loading-text="拼命加载中">
 
         </div>
     </div>
