--- a/static/main.html
+++ b/static/main.html
@@ -2,7 +2,8 @@
 <html lang="zh-cmn">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <!--debug-->
     <link rel="stylesheet" href="../components/element/element.css">
@@ -26,26 +27,13 @@
 </head>
 <body>
 <div id="app" v-loading.fullscreen.lock="fullscreenLoading" element-loading-text="拼命加载中">
-    <div class="header">
+    <div class="slide">
         <div class="decorate">
-            <div class="logo" @click="clickGoHome">
-                <img src="" alt="">
+            <div class="logo clearfix" @click="clickGoHome">
+                <i></i>
                 <span>乐速仓库管理系统</span>
             </div>
         </div>
-        <el-menu class="headerNav" mode="horizontal" @select="handleSelect" default-active="0">
-            <el-menu-item :index="index" v-for="(item, index) in headMenu">{{item}}</el-menu-item>
-        </el-menu>
-        <el-menu class="user" mode="horizontal" @select="userSelect" default-active="0" style="float: right">
-            <el-menu-item index="1"><img :src="rmsUser.portrait" alt=""></el-menu-item>
-            <el-submenu index="2">
-                <template slot="title">{{rmsUser.userName}}</template>
-                <el-menu-item index="2-1">修改信息</el-menu-item>
-                <el-menu-item index="2-2">退出登录</el-menu-item>
-            </el-submenu>
-        </el-menu>
-    </div>
-    <div class="slide">
         <el-input
                 placeholder="输入关键字进行过滤"
                 v-model="f_SlideMenuText">
@@ -59,14 +47,39 @@
                 @node-click="handleNodeClick">
         </el-tree>
     </div>
-    <div class="content">
-        <el-breadcrumb separator="/">
-            <el-breadcrumb-item v-for="(item, index) in breadcrumb">{{item}}</el-breadcrumb-item>
-        </el-breadcrumb>
-        <div id="showing" v-loading.body="showingLoading" element-loading-text="拼命加载中">
+    <div class="left">
+        <div class="header clearfix">
+            <div class="navControl"></div>
+            <el-menu class="headerNav" mode="horizontal" @select="handleSelect" default-active="0">
+                <el-menu-item :index="index" v-for="(item, index) in headMenu">{{item}}</el-menu-item>
+            </el-menu>
+            <el-menu class="user" mode="horizontal" @select="userSelect" default-active="0" style="float: right">
+                <el-submenu index="1">
+                    <template slot="title"><img :src="rmsUser.portrait" alt="">{{rmsUser.userName}}</template>
+                    <el-menu-item index="2-1">修改信息</el-menu-item>
+                    <el-menu-item index="2-2">注销登录</el-menu-item>
+                </el-submenu>
+            </el-menu>
+        </div>
+        <div class="content">
+            <div class="inner">
+                <el-row class="contentHeader">
+                    <el-col :span="4">
+                        <h3>九阳仓库</h3>
+                    </el-col>
+                    <el-col :span="4" :offset="16">
+                        <el-breadcrumb separator=">">
+                            <el-breadcrumb-item v-for="(item, index) in breadcrumb">{{item}}</el-breadcrumb-item>
+                        </el-breadcrumb>
+                    </el-col>
+                </el-row>
+                <div id="showing" v-loading.body="showingLoading" element-loading-text="拼命加载中">
 
+                </div>
+            </div>
         </div>
     </div>
 </div>
+<div class="bg"></div>
 </body>
 </html>
