前端页面 调整     1. 入库操作 单号支持最大15位，超过隐藏     2. 添加 真实 模拟入库操作数据 一条，需要转换为我们用的     3. 调整 主页 slide 样式     4. 调整 content 样式，使其更加卡片化

--- a/static/main.html
+++ b/static/main.html
@@ -35,6 +35,7 @@
             </div>
         </div>
         <el-input
+                icon="search"
                 placeholder="输入关键字进行过滤"
                 v-model="f_SlideMenuText">
         </el-input>
@@ -80,6 +81,5 @@
         </div>
     </div>
 </div>
-<div class="bg"></div>
 </body>
 </html>
