前端页面 调整     1. 完成 tree 组件 渲染操作     2. 添加 UI 到github 同步

--- a/static/main.html
+++ b/static/main.html
@@ -45,6 +45,7 @@
                 :filter-node-method="filterNode"
                 ref="slideTree"
                 highlight-current
+                :render-content="treeRenderContent"
                 @node-click="handleNodeClick">
         </el-tree>
     </div>
