平面图核心     1. 等待配置完成 新建 对于走马灯的猜想

--- a/test/zhangxing/对象删除对应属性/index.html
+++ b/test/zhangxing/对象删除对应属性/index.html
@@ -11,7 +11,7 @@
 
 <script src="../../../components/debug/jquery.js"></script>
 <script>
-    //TODO 学习 imzhangxing
+    //TODO 学习 imzhangxing 做完别忘删除 帮我把之前的我要写的todo加上 imsunhao   对了别忘了 忽视 server 与 components
     $(function () {
        $.ajax('../../../hock/real/login.json', {
            type: "GET",
