平面图核心     1. 颜色适配 类名适配     2. 双击单击 效果     3. 选中状态     4. 完成转换区域核心     5. 添加remove与resetSelectC 工具函数 对于走马灯的猜想     1. 成功，已经可以使用 新建 UI\需求图

--- a/test/走马灯banner的猜想/index.html
+++ b/test/走马灯banner的猜想/index.html
@@ -41,12 +41,38 @@
             padding: 0;
         }
     </style>
+
+
+    <style>
+        .el-carousel__item h3 {
+            color: #475669;
+            font-size: 18px;
+            opacity: 0.75;
+            line-height: 300px;
+            margin: 0;
+        }
+
+        .el-carousel__item:nth-child(2n) {
+            background-color: #99a9bf;
+        }
+
+        .el-carousel__item:nth-child(2n+1) {
+            background-color: #d3dce6;
+        }
+    </style>
+
 </head>
 <body>
 
 
 <div id="banner">
-
+    <div id="showing" style="height: 100vh">
+        <el-carousel :interval="5000" arrow="always" height="100%">
+            <el-carousel-item v-for="item in 4">
+                <h3>{{ item }}</h3>
+            </el-carousel-item>
+        </el-carousel>
+    </div>
 </div>
 
 </body>
@@ -55,6 +81,9 @@
 <script src="../../components/debug/jquery.js"></script>
 <script src="../../components/debug/vue.js"></script>
 <script src="../../components/debug/element.js"></script>
+
+
+
 
 <script>
     //TODO content的猜想 imsunhao
@@ -68,16 +97,10 @@
         el: '#banner',
         prop: {},
         data: function () {
-            return {
-
-            };
+            return {};
         },
-        computed: {
-
-        },
-        methods: {
-
-        },
+        computed: {},
+        methods: {},
         watch: {}
     });
 </script>
