表格页面     1. btn-nav 样式     2. 分页 样式     3. 添加新的 icon （5）

--- a/static/main.html
+++ b/static/main.html
@@ -67,9 +67,9 @@
             <div class="inner">
                 <el-row class="contentHeader">
                     <el-col :span="4">
-                        <h3>九阳仓库</h3>
+                        <p style="font-size: 20px;color: #333333;">九阳仓库</p>
                     </el-col>
-                    <el-col :span="4" :offset="16">
+                    <el-col :span="6" :offset="14">
                         <el-breadcrumb separator=">">
                             <el-breadcrumb-item v-for="(item, index) in breadcrumb">{{item}}</el-breadcrumb-item>
                         </el-breadcrumb>
