--- a/test/走马灯banner的猜想/index-large-4.html
+++ b/test/走马灯banner的猜想/index-large-4.html
@@ -42,7 +42,6 @@
         }
     </style>
 
-
     <style>
         .el-carousel__item h3 {
             color: #475669;
@@ -60,20 +59,20 @@
             background-color: #d3dce6;
         }
 
-        .steps{
+        .steps {
             position: absolute;
             bottom: 10px;
             left: 30vw;
             margin: auto;
         }
 
-        .el-dialog__headerbtn{
+        .el-dialog__headerbtn {
             position: absolute;
             right: 25px;
             top: 15px;
         }
 
-        .el-dialog__body{
+        .el-dialog__body {
 
         }
     </style>
@@ -96,17 +95,25 @@
                 <el-step title="步骤 1"></el-step>
                 <el-step title="步骤 2"></el-step>
                 <el-step title="步骤 3"></el-step>
+                <el-step title="步骤 4"></el-step>
             </el-steps>
         </div>
 
-        <el-carousel :interval="5000" arrow="always" height="55vh">
+        <el-carousel
+                ref="carousel"
+                :autoplay="false"
+                arrow="never"
+                indicator-position="none"
+                height="55vh">
             <el-carousel-item v-for="item in 4">
                 <h3>{{ item }}</h3>
             </el-carousel-item>
         </el-carousel>
 
         <div slot="footer" class="dialog-footer">
-            <el-button type="primary" @click="dialogFormVisible = false">保存</el-button>
+            <el-button type="primary" @click="prev" v-show="active">上一步</el-button>
+            <el-button type="primary" @click="next" v-show="active!=3">下一步</el-button>
+            <el-button type="primary" @click="submit" :loading="submitLoading" v-show="active==3">保存</el-button>
         </div>
     </el-dialog>
 </div>
@@ -119,10 +126,8 @@
 <script src="../../components/debug/element.js"></script>
 
 
-
-
 <script>
-    //TODO content的猜想 imsunhao
+    // content的猜想 imsunhao
 
 
     /*<prod>*/
@@ -134,11 +139,35 @@
         prop: {},
         data: function () {
             return {
-                dialogFormVisible:true
+                active: 0,
+                dialogFormVisible: true,
+                submitLoading:false
             };
         },
         computed: {},
-        methods: {},
+        methods: {
+            prev: function () {
+                this.active--;
+                this.$refs.carousel.prev();
+            },
+            next: function () {
+                this.active++;
+                this.$refs.carousel.next();
+            },
+            submit:function () {
+                var _this=this;
+                this.submitLoading=true;
+                setTimeout(function () {
+                    _this.submitLoading=true;
+                    _this.dialogFormVisible = false;
+                    _this.$notify({
+                        title: '成功',
+                        message: '保存成功！',
+                        type: 'success'
+                    });
+                },1500);
+            }
+        },
         watch: {}
     });
 </script>
