--- a/static/main.html
+++ b/static/main.html
@@ -24,10 +24,37 @@
     <script src="../components/debug/echarts.js"></script>
     <!--/debug-->
     <script src="js/main.js"></script>
+
+    <style>
+        .avatar-uploader .el-upload {
+            border: 1px dashed #d9d9d9;
+            border-radius: 6px;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+        .avatar-uploader .el-upload:hover {
+            border-color: #20a0ff;
+        }
+        .avatar-uploader-icon {
+            font-size: 28px;
+            color: #8c939d;
+            width: 178px;
+            height: 178px;
+            line-height: 178px;
+            text-align: center;
+        }
+        .avatar {
+            width: 178px;
+            height: 178px;
+            display: block;
+        }
+    </style>
+
 </head>
 <body>
 <div id="app" v-loading.fullscreen.lock="fullscreenLoading" element-loading-text="拼命加载中">
-    <div class="slide">
+    <div :class="{slide:true,slideOpen:navIsOpen}">
         <div class="decorate">
             <div class="logo clearfix" @click="clickGoHome">
                 <i></i>
@@ -35,6 +62,7 @@
             </div>
         </div>
         <el-input
+                v-show="!navIsOpen"
                 icon="search"
                 placeholder="输入关键字进行过滤"
                 v-model="f_SlideMenuText">
@@ -49,17 +77,17 @@
                 @node-click="handleNodeClick">
         </el-tree>
     </div>
-    <div class="left">
+    <div :class="{left:true,leftOpen:navIsOpen}">
         <div class="header clearfix">
-            <div class="navControl"></div>
-            <el-menu class="headerNav" mode="horizontal" @select="handleSelect" default-active="0">
+            <div class="navControl" @click="navOpen"></div>
+            <el-menu class="headerNav" mode="horizontal" @select="handleSelect" :default-active="0">
                 <el-menu-item :index="index" v-for="(item, index) in headMenu">{{item}}</el-menu-item>
             </el-menu>
-            <el-menu class="user" mode="horizontal" @select="userSelect" default-active="0" style="float: right">
+            <el-menu class="user" mode="horizontal" style="float: right">
                 <el-submenu index="1">
                     <template slot="title"><img :src="rmsUser.portrait" alt="">{{rmsUser.userName}}</template>
-                    <el-menu-item index="2-1">修改信息</el-menu-item>
-                    <el-menu-item index="2-2">注销登录</el-menu-item>
+                    <el-menu-item index="2-1" @click="dialogUserVisible=!dialogUserVisible">修改信息</el-menu-item>
+                    <el-menu-item index="2-2" @click="signOut">注销登录</el-menu-item>
                 </el-submenu>
             </el-menu>
         </div>
@@ -71,7 +99,7 @@
                     </el-col>
                     <el-col :span="6" :offset="14">
                         <el-breadcrumb separator=">">
-                            <el-breadcrumb-item v-for="(item, index) in breadcrumb">{{item}}</el-breadcrumb-item>
+                            <el-breadcrumb-item v-for="(item, index) in breadcrumb" :index="index">{{item}}</el-breadcrumb-item>
                         </el-breadcrumb>
                     </el-col>
                 </el-row>
@@ -81,6 +109,29 @@
             </div>
         </div>
     </div>
+    <el-dialog
+            size="small"
+            v-model="dialogUserVisible">
+        <div class="dialog-title clearfix" slot="title">
+            <span class="el-dialog__title">修改用户信息</span>
+        </div>
+        <el-form :model="rmsUser">
+            <el-upload
+                    class="avatar-uploader"
+                    action="//jsonplaceholder.typicode.com/posts/"
+                    :show-file-list="false"
+                    :on-success="handleAvatarScucess"
+                    :before-upload="beforeAvatarUpload">
+                <img v-if="rmsUser.portrait" :src="rmsUser.portrait" class="avatar">
+                <i v-else class="el-icon-plus avatar-uploader-icon"></i>
+            </el-upload>
+        </el-form>
+
+        <div slot="footer" class="dialog-footer">
+            <el-button type="primary" @click="userSubmit" :loading="userLoading">保存</el-button>
+        </div>
+    </el-dialog>
 </div>
+
 </body>
 </html>
