--- a/static/main.html
+++ b/static/main.html
@@ -63,7 +63,8 @@
         <div class="decorate">
             <div class="logo clearfix" @click="clickGoHome">
                 <i></i>
-                <span>乐速仓库管理系统</span>
+                <!--<span>乐速仓库管理系统</span>-->
+                <span>直销仓储管理系统</span>
             </div>
         </div>
         <el-input
