--- a/static/main.html
+++ b/static/main.html
@@ -14,6 +14,7 @@
     <script src="/static/lib/common.js"></script>
     <script>
         window.dbmessage = JSON.parse('<%-JSON.stringify(data)%>');
+        window.statusConfig = JSON.parse('<%-JSON.stringify(statusCode)%>');
     </script>
     <!--/prod-->
     <title>乐速 仓储管理系统 V2.0</title>
