完成     1. 工具模块的分离     2. 出库预约-删除废物按钮     3. 出库预约-准备进行接口对接

--- a/static/main.html
+++ b/static/main.html
@@ -27,6 +27,7 @@
     <script src="../components/debug/element.js"></script>
     <script src="../components/debug/echarts.js"></script>
     <!--/debug-->
+    <script src="js/Tools.js"></script>
     <script src="js/main.js"></script>
 
     <style>
