主页面修改版本号 为 3.0

--- a/static/main.html
+++ b/static/main.html
@@ -17,7 +17,7 @@
         window.statusConfig = JSON.parse('<%-JSON.stringify(statusCode)%>');
     </script>
     <!--/prod-->
-    <title>乐速 仓储管理系统 V2.0</title>
+    <title>乐速 仓储管理系统 V3.0</title>
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -65,8 +65,8 @@
         <div class="decorate">
             <div class="logo clearfix" @click="clickGoHome">
                 <i></i>
-                <!--<span>乐速仓库管理系统</span>-->
-                <span>直销仓储管理系统</span>
+                <span>乐速仓库管理系统</span>
+                <!--<span>直销仓储管理系统</span>-->
             </div>
         </div>
         <el-input
