打印核心 修正 开始收货-打印标签页 bug修复

--- a/static/main.html
+++ b/static/main.html
@@ -163,7 +163,7 @@
         <!--<div class="barcode" id="div129"></div>-->
         <!--</div>-->
         <sh-print
-                v-for="printData of printDatas"
+                v-for="printData of printDatas.p0"
                 :val2="printData.val2"
                 :rwdh="printData.rwdh"
                 :dhrq="printData.dhrq"
@@ -174,16 +174,16 @@
         <div class="p1_inner">
 
             <h2 style="text-align: center">整车货物运输承运协议</h2>
-            <p>托运方（以下简称甲方）： {{printDatas.info['托运方']||'____________'}} 联系人：
-                {{printDatas.info['托运方联系人']||'____________'}}；承运方（以下简称乙方）：{{printDatas.info['承运方']||'____________'}}
-                联系人： {{printDatas.info['承运方联系人']||'____________'}}；</p>
-            <p>承运人姓名：{{printDatas.info['承运人']['姓名']||'____________'}} 车牌号码：{{printDatas.info['车牌号码']||'____________'}}
-                证件号：{{printDatas.info['承运人']['证件号']||'____________'}}
-                联系方式：{{printDatas.info['承运人']['联系方式']||'____________'}}；</p>
+            <p>托运方（以下简称甲方）： {{printDatas.p1.info['托运方']||'____________'}} 联系人：
+                {{printDatas.p1.info['托运方联系人']||'____________'}}；承运方（以下简称乙方）：{{printDatas.p1.info['承运方']||'____________'}}
+                联系人： {{printDatas.p1.info['承运方联系人']||'____________'}}；</p>
+            <p>承运人姓名：{{printDatas.p1.info['承运人']['姓名']||'____________'}} 车牌号码：{{printDatas.p1.info['车牌号码']||'____________'}}
+                证件号：{{printDatas.p1.info['承运人']['证件号']||'____________'}}
+                联系方式：{{printDatas.p1.info['承运人']['联系方式']||'____________'}}；</p>
             <p>根据《中华人民共和国合同法》及相关法律法规，甲乙双方经友好协商，就甲方委托乙方提供货物运输服务事宜达成本协议，以便双方共同遵守。</p>
             <p>一、货物信息</p>
             <el-table
-                    :data="printDatas.data"
+                    :data="printDatas.p1.data"
                     :border="true"
                     show-summary>
                 <el-table-column
@@ -231,8 +231,8 @@
                 </el-table-column>
             </el-table>
             <p>二、运输价格及付款方式：本次运输价格:<u>按合同规定</u>，付款方式： <u>月结</u></p>
-            <p>三、到货时限：要求于 {{auto_time_new(printDatas.info['到货时限'],1)}} 前到达目的地，联系指定收货人签收货物。</p>
-            <p>四、回执单签收： 回单份数：{{printDatas.info['回单份数']||'_________'}} 份</p>
+            <p>三、到货时限：要求于 {{auto_time_new(printDatas.p1.info['到货时限'],1)}} 前到达目的地，联系指定收货人签收货物。</p>
+            <p>四、回执单签收： 回单份数：{{printDatas.p1.info['回单份数']||'_________'}} 份</p>
             <p>五、乙方义务</p>
             <p>
                 1：乙方必须按照甲方指定的收货人以及收货地址交货物安全、准确、及时送达甲方指定目的地，运输过程中如出现灭失、短少、污染、损坏，乙方必须按照货物的实际价值赔偿甲方并赔偿因此给甲方造成的一切损失。2：甲乙双方风险责任的转移：货物经甲乙双方清点、验收无误并由乙方在本协议收签字确认后，货物到达目的地收货人签收之前，货物的风险责任全部由乙方承担。3：乙方必须保证联系方式24小时开机并随时接听电话，确保甲方对运输信息跟踪的及时性。在运输过程中如有货物不能按时到达目的地，乙方必须提前与甲方联系，以便甲方协助解决，由于货物延迟到达给甲方造成的损失由乙方承担。4：乙方必须保证送达目的地后在货物交接时，如收货方对货物有任何意见，乙方应立即与甲方联系处理，不得与收货方发生争执。要求必须由收货人出具身份证明或收货人委托代理人出具书面委托证明及身份证明，乙方核实后，由收货人或委托代理人签收，回执单签收有特殊要求的依据其要求，否则签收无效。</p>
